css/styles.css
/* COLORS
 * ----------
 *
 *
 */
html {
  height: 100%;
}
body {
  margin: 0;
  padding: 0;
  height: 100%;
  color: white;
}
main {
  height: 100%;
}
h1 {
  margin-top: 0;
}
h2 {
  color: black;
  text-align: center;
  font-size: 30pt;
  padding-bottom: 2%;
}
h3 {
  margin: 0;
}
.cd-fixed-bg {
  min-height: 100%;
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center center;
}
.cd-fixed-bg.cd-bg-1 {
  position: relative;
  background-image: url("images/inthegym.jpg");
}
.cd-fixed-bg.cd-bg-2 {
  background-image: url("images/weightrack.jpg");
}
.cd-fixed-bg.cd-bg-3 {
  background-image: url("images/outthegym.jpg");
}
.cd-fixed-bg.cd-bg-4 {
  background-image: url("images/inthegym5.jpg");
}
.cd-scrolling-bg {
   min-height: 100%;
}
.get-move {
  margin-left: 10em;
  margin-top: 10em;
  position: absolute;
}
.download {
  margin-top: 2%;
  margin-left: 2%;
}
.navbar {
  margin-bottom: 0;
}
.nav-menu {
  padding-right: 3%;
  margin-right: 0;
}
.product-description {
  width: 80%;
  margin: 0 auto;
}
.main-description {
  color: white;
  font-size: 15pt;
  text-align: center;
  padding: 5% 0;
}

a.navbar-brand {
  padding-top: 12%;
}

#about-activ8 {
  padding-top: 5%;
}
.dash img {
  width: 60%;
  margin: 0 auto;
  display: block;
}
.cd-scrolling-bg {
  position: relative;
  min-height: 100%;
  padding: 4em 0;
  line-height: 1.6;
  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
  z-index: 2;
}
.cd-scrolling-bg.cd-color-1 {
  background-color: #3d3536;
  color: #a6989a;
}
.cd-scrolling-bg.cd-color-2 {
  background-color: #99a478;
  color: #3d3536;
}
.cd-scrolling-bg.cd-color-3 {
  background-color: #b4d7a8;
  color: #3d3536;
}

.pink {
  background-color: pink;
}

.blue {
  background-color: lightblue;
}

.purple {
  background-color: thistle;
}

.o-red {
  outline: red solid 4px;
}

